# web_search_mcp

./: .dockerignore  .env.example  README.md  demo_read_url.py  demo_search.py  docker-compose.yml  pyproject.toml
.cursor/plans/: add_arxiv_mcp_83196724.plan.md  readability_url_reader_1751d2a3.plan.md  rename_compose_project_9b4a5eaa.plan.md  url_reader_tool_f03a27ca.plan.md  wikipedia_mcp_и_теги_511b9405.plan.md
.cursor/rules/: concept.mdc
arxiv_mcp/: Dockerfile  app.py
contracts/: README.md
contracts/general/: read_url.md  search_config.md  web_search.md
contracts/specialized/: arxiv.md  wikipedia.md
docs/agent-patterns/: researcher-agent.md
mcp_server/: Dockerfile  __init__.py  __main__.py  app.py  config.py  models.py  readability_client.py  searx_client.py  url_reader.py
mcp_server/tools/: __init__.py  config.py  read_url.py  search.py
readability_service/: Dockerfile  package.json  server.js
searxng/core-config/: limiter.toml  settings.yml
tests/: test_read_url_tool.py  test_readability_client.py  test_search_tool.py
wikipedia_mcp/: Dockerfile
